welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() 
{
	def faireV(c:Color) {
		setCouleurBrosse(c)
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		droite()
		avance()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		gauche()
		recule()
	
		} // C'est juste pour se faire un V

			

}
override def run()
{
		for(l<-1 to 3)
		{
			for (m<-1 to 3) 
			{
				Motif()
				avance(5)	
			} // Cette boucle là sert a faire un carré, revenir à la position initiale puis avancer jusqu'au nouveau carré
			gauche()
			avance(5)
			droite()
			
		}// Une fois que la rangée est terminée, on se place en position initiale sur une nouvelle rangée
}

def Motif()
{	
faireV(Color.yellow)
faireV(Color.red)
faireV(Color.blue)
faireV(Color.green)
}
	








